// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OperationGenerator > [DELETE] /pet/{petId} with unknownType \`any\` 1`] = `
"import type { DeletePetPetidMutationResponse } from "./DeletePetPetidMutationResponse";

 export type DeletePetPetidMutationResponse = any;
export type DeletePetPetidMutation = {
    Response: DeletePetPetidMutationResponse;
};
"
`;

exports[`OperationGenerator > [DELETE] /pet/{petId} with unknownType \`unknown\` 1`] = `
"import type { DeletePetPetidMutationResponse } from "./DeletePetPetidMutationResponse";

 export type DeletePetPetidMutationResponse = unknown;
export type DeletePetPetidMutation = {
    Response: DeletePetPetidMutationResponse;
};
"
`;

exports[`OperationGenerator > [GET] /pets with optionalType \`questionToken\` 1`] = `
"import { Pets } from "./Pets";
import { Error } from "./Error";
import type { ListPets200 } from "./ListPets200";
import type { ListPetsError } from "./ListPetsError";
import type { ListPetsQueryParams } from "./ListPetsQueryParams";
import type { ListPetsQueryResponse } from "./ListPetsQueryResponse";

 export type ListPetsQueryParams = object;

 /**
 * @description A paged array of pets
 */
export type ListPets200 = ;

 /**
 * @description unexpected error
 */
export type ListPetsError = ;

 /**
 * @description A paged array of pets
 */
export type ListPetsQueryResponse = ;
export type ListPetsQuery = {
    Response: ListPetsQueryResponse;
    QueryParams: ListPetsQueryParams;
};
"
`;

exports[`OperationGenerator > [GET] /pets with optionalType \`questionToken\` 2`] = `
"import { Pet } from "./Pet";
import { Error } from "./Error";
import type { ShowPetById200 } from "./ShowPetById200";
import type { ShowPetByIdError } from "./ShowPetByIdError";
import type { ShowPetByIdPathParams } from "./ShowPetByIdPathParams";
import type { ShowPetByIdQueryResponse } from "./ShowPetByIdQueryResponse";

 export type ShowPetByIdPathParams = object;

 /**
 * @description Expected response to a valid request
 */
export type ShowPetById200 = ;

 /**
 * @description unexpected error
 */
export type ShowPetByIdError = ;

 /**
 * @description Expected response to a valid request
 */
export type ShowPetByIdQueryResponse = ;
export type ShowPetByIdQuery = {
    Response: ShowPetByIdQueryResponse;
    PathParams: ShowPetByIdPathParams;
};
"
`;

exports[`OperationGenerator > [POST] /pets 201 1`] = `
"import { Error } from "./Error";
import type { CreatePets201 } from "./CreatePets201";
import type { CreatePetsError } from "./CreatePetsError";
import type { CreatePetsMutationRequest } from "./CreatePetsMutationRequest";
import type { CreatePetsMutationResponse } from "./CreatePetsMutationResponse";

 export type CreatePetsMutationRequest = object;

 /**
 * @description unexpected error
 */
export type CreatePetsError = ;

 /**
 * @description Null response
 */
export type CreatePets201 = object;

 /**
 * @description Null response
 */
export type CreatePetsMutationResponse = object;
export type CreatePetsMutation = {
    Response: CreatePetsMutationResponse;
    Request: CreatePetsMutationRequest;
};
"
`;
